Formulating the LangGraph architecture.

--- a/agent.ipynb
+++ b/agent.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "class Researcher(BaseModel):\n",
     "    name: str = Field(description=\"The name of the researcher.\")\n",
     "    area_of_research: str = Field(description=\"The area of research of the researcher.\")\n",
-    "    affiliation: str = Field(description=\"The affiliation of the researcher.\")\n",
+    "    field_of_study: str = Field(description=\"The academic or professional field the researcher specializes in.\")\n",
     "\n",
     "    @property\n",
     "    def persona(self) -> str:\n",
@@ -51,14 +51,14 @@
     "\n",
     "\n",
     "#This class will be responsible for the Web search looking for how the web has reacted to the research.\n",
-    "class Analyst(BaseModel):\n",
-    "    name: str = Field(description=\"The name of the analyst.\")\n",
-    "    affiliation: str = Field(description=\"The affiliation of the analyst.\")\n",
-    "    area_of_expertise: str = Field(description=\"The area of expertise of the analyst.\")\n",
+    "class Assistant(BaseModel):\n",
+    "    name: str = Field(description=\"The name of the assistant.\")\n",
+    "    skills: List[str] = Field(description=\"A list of skills the assistant possesses.\")\n",
+    "    tasks: List[str] = Field(\"The list of tasks assigned to the assistant by their supervisor.\")\n",
     "\n",
     "    @property\n",
     "    def persona(self) -> str:\n",
-    "        return f\"Analyst Name: {self.name}\\nAnalyst Affiliation: {self.affiliation}\\nArea of Expertise: {self.area_of_expertise}\\n\"\n",
+    "        return f\"Assistant Name: {self.name}\\Assistant Skills: {self.skills}\\nTasks Assigned: {self.tasks}\\n\"\n",
     "\n",
     "\n",
     "class QueryArxivState(BaseModel):\n",
@@ -67,11 +67,23 @@
     "\n",
     "\n",
     "class SearchQuery(BaseModel):\n",
-    "    search_query: str = Field(None, description=\"Search query for retrieval.\")\n",
+    "    search_query: str = Field(None, description=\"Search query for retrieval.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GeneratePersonas(TypedDict):\n",
+    "    researcher: Researcher\n",
+    "    assistant: Assistant\n",
     "\n",
     "\n",
-    "    \n",
     "class OverallState(TypedDict):\n",
+    "    researcher: Researcher\n",
+    "    assistant: Assistant\n",
     "    topic: str\n",
     "    query: str\n",
     "    extra_information: str\n",
@@ -94,20 +106,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "researcher=Researcher(name='Dr. Rachel Kim', area_of_research='Deep Learning based Lane Detection Systems', affiliation='Stanford University') analyst=Analyst(name='John Lee', affiliation='MIT Consulting', area_of_expertise='Transportation Systems')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'researcher': Researcher(name='Dr. Rachel Kim', area_of_research='Deep Learning based Lane Detection Systems', affiliation='Stanford University'),\n",
+       " 'analyst': Analyst(name='John Lee', affiliation='MIT Consulting', area_of_expertise='Transportation Systems')}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Creating the Researcher and Analyst\n",
+    "generate_personas_prompt = \"\"\"\n",
+    "You are tasked with generating two personas:\n",
+    "\n",
+    "1. A persona for an expert researcher undergoing research in a specific topic.\n",
+    "\n",
+    "2. A persona for an analyst which assists the expert researcher by gathering non-technical, external information related to the research topic.\n",
+    "\n",
+    "The topic of the research currently undergoing is: {topic}\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def generate_personas(state: OverallState):\n",
+    "    \n",
+    "    sys_msg = generate_personas_prompt.format(topic = state[\"topic\"])\n",
+    "    llm = model.with_structured_output(GeneratePersonas)\n",
+    "\n",
+    "    response = llm.invoke([SystemMessage(content = sys_msg)] + [HumanMessage(content = \"Generate the researcher and the analyst\")])\n",
+    "\n",
+    "    print(response)\n",
+    "\n",
+    "    return {\n",
+    "        \"researcher\": response.researcher,\n",
+    "        \"analyst\": response.analyst\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arxiv_query_prompt = f\"\"\"\n",
+    "arxiv_query_prompt = \"\"\"\n",
     "You are an expert researcher given a topic for research. Your goal is to perform a literature review of the existing research related to the topic by generating a well-structured search query for retrieving relevant research papers from arxiv.\n",
     "\n",
-    "You will also write down all the extra information you need apart from the research papers. This information may include anything non technical from the web.\n",
+    "Here's your area of research and affiliation:\n",
+    "{persona}\n",
     "\"\"\"\n",
     "\n",
     "search_web_prompt = \"\"\"\n",
     "You are assistant to an expert researcher who gathers extra non-technical information about a research topic. The researcher will provide you with extra information based on which you have to create a web search query to search the web.\n",
     "\n",
-    "The topic of research is: {topic}\n",
+    "Here's your area of expertise:\n",
+    "{persona}\n",
     "\n",
     "\n",
     "Pay careful attention to the information required by your researcher and generate a web search query accordingly.\n",
